--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>https://sunidhib2002.github.io/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -512,7 +512,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="D:\Projects(WEBSITES)\Compras_final\screenshots\website_1.png" alt="Compras: E-Commerce Website">
+	               	<img src="images/website_1.PNG" alt="Compras: E-Commerce Website">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -544,7 +544,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/bedroom_1.png"alt="Clouds">
+	               	<img src="images/bedroom_1.png"alt="Blender">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -611,7 +611,7 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="D:\Projects(WEBSITES)\Compras_final\screenshots\website_3.png" alt="" />
+				     		<img src="images/website_3.PNG" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
