--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/bedroom_1.png"alt="Blender">
+	               	<img src="images/CAFE_1.PNG" alt="Blender">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
